fonts for safari added

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,20 +4,19 @@
 @font-face {
   font-family: 'Morton-bold';
   font-style: normal;
-  font-display: swap;
-  src: font-url('/assets/fonts/Morton-Bold.otf') format('opentype');
+  src: url('/assets/fonts/Morton-Bold.otf') format('opentype');
 }
 @font-face {
   font-family: 'Morton-Regular';
   font-style: normal;
-  font-display: swap;
-  src: font-url('/assets/fonts/Morton-regular.otf') format('opentype');
+  src: url('/assets/fonts/Morton-regular.otf') format('opentype'),
+    url('/assets/fonts/Morton-regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Butler_Bold';
   font-style: normal;
-  font-display: swap;
-  src: font-url('/assets/fonts/Butler_Bold.otf') format('opentype');
+  src: url('/assets/fonts/Butler_Bold.otf') format('opentype'),
+    url('/assets/fonts/Morton-Bold.ttf') format('truetype');
 }
 html,
 body {
