fix Morton bold font

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,14 +4,12 @@
 @font-face {
   font-family: 'Morton-bold';
   font-style: normal;
-  src: url('/assets/fonts/Morton-Bold.otf') format('opentype'),
-    url('/assets/fonts/Morton-Bold.ttf') format('truetype');
+  src: url('/assets/fonts/Morton-Bold.otf') format('opentype');
 }
 @font-face {
   font-family: 'Morton-Regular';
   font-style: normal;
-  src: url('/assets/fonts/Morton-Regular.otf') format('opentype'),
-    url('/assets/fonts/Morton-Regular.ttf') format('truetype');
+  src: url('/assets/fonts/Morton-Regular.otf') format('opentype');
 }
 @font-face {
   font-family: 'Butler_Bold';
