--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,12 +4,12 @@
 @font-face {
   font-family: 'Morton-bold';
   font-style: normal;
-  src: url('/assets/fonts/Morton-Bold.otf') format('opentype');
+  src: font-url('/assets/fonts/Morton-Bold.otf') format('opentype');
 }
 @font-face {
   font-family: 'Morton-Regular';
   font-style: normal;
-  src: url('/assets/fonts/Morton-Regular.otf') format('opentype');
+  src: font-url('/assets/fonts/Morton-Regular.otf') format('opentype');
 }
 @font-face {
   font-family: 'Butler_Bold';
