test with other font

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,7 +4,7 @@
 @font-face {
   font-family: 'Morton-bold';
   font-style: normal;
-  src: font-url('/assets/fonts/Morton-Bold.otf') format('opentype');
+  src: font-url('/assets/fonts/Cinzel-Variable.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Morton-Regular';
