--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,17 +4,17 @@
 @font-face {
   font-family: 'Morton-bold';
   font-style: normal;
-  src: asset-url('/assets/fonts/Morton-Bold.otf') format('opentype');
+  src: asset-path('/assets/fonts/Morton-Bold.otf') format('opentype');
 }
 @font-face {
   font-family: 'Morton-Regular';
   font-style: normal;
-  src: asset-url('/assets/fonts/Morton-Regular.otf') format('opentype');
+  src: asset-path('/assets/fonts/Morton-Regular.otf') format('opentype');
 }
 @font-face {
   font-family: 'Butler_Bold';
   font-style: normal;
-  src: asset-url('/assets/fonts/Butler_Bold.otf') format('opentype');
+  src: asset-path('/assets/fonts/Butler_Bold.otf') format('opentype');
 }
 html,
 body {
@@ -25,7 +25,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: $titles;
+  font-family: $titles, 'Open-sans';
   color: $font-color;
 }
 h2 {
@@ -34,7 +34,7 @@ h2 {
   color: $font-color;
 }
 p {
-  font-family: $paragraph;
+  font-family: $paragraph, 'Open-sans';
   font-size: 19px;
   color: $font-color;
 }
