--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,8 +17,13 @@
   src: url('@/static/fonts/Butler_Bold.otf') format('opentype');
 }
 html,
-body {
+body,
+.background-loading {
   background-color: $primary-color;
+}
+.background-loading {
+  height: 100vh;
+  width: 100vh;
 }
 
 h1,
@@ -80,6 +85,7 @@ p {
 /****slider******/
 .slider {
   height: 100vh;
+  max-height: 100vh;
 }
 .slider,
 .slider img {
